# embeded_shader_test

./: .gitmodules  CMakeLists.txt  makeproj.bat  readme.md
src/: CMakeLists.txt  main.cpp
src/embeded/: .gitignore  draw2d_ps.hlsl  draw3d_vs.hlsl
